Fixing the nav button on mobile

--- a/sass/03-components/_02-navigation.scss
+++ b/sass/03-components/_02-navigation.scss
@@ -332,7 +332,7 @@
 			right: 0;
 		}
 		.menu-toggle{
-			border: none;
+			border: none !important;
 			&:before{
 				content: "\f335";
 				font-family: 'dashicons';
